--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,15 @@
           class="search-input"
           placeholder="Search images..."
         />
-        <button type="submit" class="search-btn">Search</button>
+        <button type="submit" class="btn-search">Search</button>
       </form>
     </div>
     <div class="container">
       <div class="gallery"></div>
     </div>
+    <button class="btn-load btn-load-hidden">Load more</button>
     <div id="loader">Loading...</div>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
