--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HW 12 JS</title>
+    <title>Image Gallery</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
